--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,8 +1,9 @@
 /* Footer.css - Footer Styles */
 .footer-wrap {
-  background: #222;
+  background: #232936;
+  background-size: cover;
   color: #fff;
-  padding: 80px 0 0;
+  padding: 50px 0 20px 0;
 }
 
 .footer_logo img {
@@ -10,20 +11,227 @@
   margin-bottom: 20px;
 }
 
+.footer-links {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links li {
+  margin-bottom: 10px;
+}
+
+.footer-links a {
+  color: #bcc5d0;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer-links a:hover {
+  color: #e47b9b;
+}
+
 .hourswrp {
   list-style: none;
   padding: 0;
 }
 
-.social-icons ul {
-  display: flex;
+.hourswrp li {
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #bcc5d0;
+  border-bottom: 1px solid #484848;
+  padding: 5px 0;
+}
+
+.hourswrp span {
+  float: right;
+}
+
+.footer_info {
+  margin-top: 20px;
+}
+
+.footer-adress {
   list-style: none;
   padding: 0;
 }
 
-.footer-bottom {
-  background: #1a1a1a;
-  padding: 20px 0;
-  margin-top: 60px;
+.footer-adress li {
+  margin-bottom: 10px;
+}
+
+.footer-adress a {
+  color: #212529;
+  text-decoration: none;
+}
+
+.footer-adress a:hover {
+  color: #007bff;
+}
+
+.footer-adress li span a, .footer-adress li span {
+  font-size: 14px;
+  color: #bcc5d0;
+  text-decoration: none;
+}
+
+.footer_phone a {
+  font-size: 24px !important;
+  font-weight: bold;
+}
+
+.social-icons {
+  margin-top: 20px;
+}
+
+.social-icons ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.social-icons ul li {
+  margin-right: 10px;
+}
+
+.social-icons ul li a {
+  border: 1px solid #fff;
+  display: block;
+  font-size: 18px;
   text-align: center;
+  color: #fff;
+  width: 38px;
+  height: 38px;
+  line-height: 38px;
+  border-radius: 100%;
+}
+
+.social-icons ul li a:hover {
+  color: #007bff;
+}
+
+.footer-bottom {
+  background: #343a40;
+  padding: 20px 0;
+  margin-top: 0; /* Remove whitespace */
+  text-align: center;
+  color: #fff;
+  margin-bottom: 20px; /* Add margin bottom */
+}
+
+.footer-bottom.text-center {
+  background: #fff; /* Set background to white */
+}
+
+.footer-bottom a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.footer-bottom a:hover {
+  color: #0056b3;
+}
+
+.footer-wrap p {
+  font-size: 14px;
+  color: #bcc5d0;
+  margin-top: 15px;
+}
+
+.footer-wrap h3 {
+    font-size: 18px;
+    margin-bottom: 20px;
+    display: inline-block;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    margin-bottom: 15px;
+}
+
+img {
+    max-width: 100%;
+    vertical-align: middle;
+    border-style: none;
+}
+
+a {
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    color: #ffb607;
+}
+
+a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+a:hover {
+    color: #0056b3;
+    text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .footer-wrap {
+    text-align: center;
+  }
+
+  .footer_logo {
+    margin-bottom: 20px;
+  }
+
+  .footer-links,
+  .hourswrp,
+  .footer-adress {
+    text-align: left;
+  }
+
+  .social-icons ul {
+    justify-content: center;
+  }
+}
+
+.fab {
+    font-family: 'Font Awesome 5 Brands';
+    font-weight: 400;
+}
+
+.fa, .fas, .far, .fal, .fad, .fab {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+.text-center {
+    text-align: center !important;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.copyright-text {
+    font-size: 14px;
+    color: #000;
+    background: #fff; /* Set background to white */
 }
