--- a/src/styles/Enroll.css
+++ b/src/styles/Enroll.css
@@ -13,7 +13,7 @@
   }
   
   .choice-wrap.enroll-wrap .title h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;  /* increased from 2rem */
     margin-bottom: 20px;
   }
   
@@ -22,15 +22,16 @@
   }
 
   .choice-wrap .title h1 {
-    font-size: 48px;
+    font-size: 56px;    /* increased from 48px */
     font-weight: bold;
   }
 
   .title h1 {
-    font-size: 48px;
+    font-size: 56px;    /* increased from 48px */
     color: #56225e;
     margin: 0;
     font-weight: bold;
+    padding-bottom: 1px;
   }
 
   .phonewrp {
