--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,7 +1,6 @@
 .gallery-wrap {
-  padding: 60px 0;
-  background: url('../../assets/images/gallery-bg.jpg') no-repeat top;
-  background-size: cover;
+  padding: 80px 0;
+  background: url(/src/assets/images/gallery-bg.jpg) center top / cover no-repeat;
 }
 
 .gallery-info {
