--- a/src/styles/SliderComponent.css
+++ b/src/styles/SliderComponent.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 700px;
   margin-bottom: -170px;
+  background-color: #000; /* Added background color black */
 }
 
 .slider-item {
@@ -184,4 +185,92 @@
 
 .slider-button i {
     margin-right: 10px;
+}
+
+/* Responsive adjustments for large tablets */
+@media (max-width: 992px) {
+  .slider-container {
+    height: 500px;
+    margin-bottom: -100px;
+  }
+
+  .slider-content h2 {
+    font-size: 36px;
+  }
+
+  .slider-content p {
+    font-size: 16px;
+  }
+
+  .slider-button {
+    padding: 18px 30px;
+    font-size: 16px;
+  }
+
+  .tp-arr-iwrapper {
+    font-size: 24px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+  }
+}
+
+/* Responsive adjustments for small tablets */
+@media (max-width: 768px) {
+  .slider-container {
+    height: 400px;
+    margin-bottom: -80px;
+  }
+
+  .slider-content h2 {
+    font-size: 28px;
+  }
+
+  .slider-content p {
+    font-size: 14px;
+  }
+
+  .slider-button {
+    padding: 14px 25px;
+    font-size: 14px;
+  }
+
+  .tp-arr-iwrapper {
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+  }
+}
+
+/* Responsive adjustments for mobile devices */
+@media (max-width: 576px) {
+  .slider-container {
+    height: 300px;
+    margin-bottom: -50px;
+  }
+
+  .slider-content {
+    width: 90%;
+  }
+
+  .slider-content h2 {
+    font-size: 24px;
+  }
+
+  .slider-content p {
+    font-size: 12px;
+  }
+
+  .slider-button {
+    padding: 10px 20px;
+    font-size: 12px;
+  }
+
+  .tp-arr-iwrapper {
+    font-size: 18px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+  }
 }
