--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -3,8 +3,13 @@
   text-align: center;
 }
 
+.title{
+  color: red;
+}
+
 .testimonials-wrap .title {
   margin-bottom: 50px;
+  
 }
 
 .testimonials-wrap .title h1 {
