--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -111,3 +111,27 @@ h1, h2, h3, h4, h5, h6 {
 .h1, h1 {
     font-size: 2.5rem;
 }
+
+@media (max-width: 1200px) {
+  .about-wrap .title h1 {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  .about-wrap .title h1 {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-wrap .title h1 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 576px) {
+  .about-wrap .title h1 {
+    font-size: 28px;
+  }
+}
