--- a/src/styles/Choice.css
+++ b/src/styles/Choice.css
@@ -120,6 +120,30 @@
     }
   }
 
+  @media (max-width: 1200px) {
+    .choice-wrap .title h1 {
+      font-size: 40px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .choice-wrap .title h1 {
+      font-size: 36px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .choice-wrap .title h1 {
+      font-size: 32px;
+    }
+  }
+
+  @media (max-width: 576px) {
+    .choice-wrap .title h1 {
+      font-size: 28px;
+    }
+  }
+
   .title h1 {
     font-size: 48px;
     color: #56225e;
