--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -16,8 +16,26 @@
     padding: 80px 0;
   }
   
+  @media (max-width: 1200px) {
+    .section-padding {
+      padding: 70px 0;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .section-padding {
+      padding: 60px 0;
+    }
+  }
+
   @media (max-width: 768px) {
     .section-padding {
       padding: 50px 0;
+    }
+  }
+
+  @media (max-width: 576px) {
+    .section-padding {
+      padding: 40px 0;
     }
   }
