--- a/src/styles/Newsletter.css
+++ b/src/styles/Newsletter.css
@@ -269,3 +269,44 @@
 .newsletter-row form {
   flex: 1;
 }
+
+/* Responsive styles for the newsletter section */
+@media screen and (max-width: 1200px) {
+  .newsletter-wrap {
+    padding: 25px 0;
+  }
+
+  .newsletter-row h1 {
+    font-size: 42px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .newsletter-wrap {
+    padding: 20px 0;
+  }
+
+  .newsletter-row h1 {
+    font-size: 36px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .newsletter-wrap {
+    padding: 15px 0;
+  }
+
+  .newsletter-row h1 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .newsletter-wrap {
+    padding: 10px 0;
+  }
+
+  .newsletter-row h1 {
+    font-size: 24px;
+  }
+}
