--- a/src/styles/Video.css
+++ b/src/styles/Video.css
@@ -76,6 +76,56 @@
   color: #56225e; /* Change to desired color */
 }
 
+@media screen and (max-width: 1200px) {
+  .video-wrap {
+    padding: 40px 0;
+  }
+
+  .title h1 {
+    font-size: 42px;
+  }
+
+  .video {
+    padding: 200px 0;
+  }
+
+  .playbtn a {
+    width: 70px;
+    height: 70px;
+  }
+
+  .playbtn a span {
+    border-left-width: 35px;
+    border-top-width: 24px;
+    border-bottom-width: 24px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .video-wrap {
+    padding: 30px 0;
+  }
+
+  .title h1 {
+    font-size: 36px;
+  }
+
+  .video {
+    padding: 150px 0;
+  }
+
+  .playbtn a {
+    width: 60px;
+    height: 60px;
+  }
+
+  .playbtn a span {
+    border-left-width: 30px;
+    border-top-width: 20px;
+    border-bottom-width: 20px;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .video-wrap {
     padding: 50px 0;
@@ -83,6 +133,31 @@
 
   .title h1 {
     font-size: 36px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-wrap {
+    padding: 20px 0;
+  }
+
+  .title h1 {
+    font-size: 30px;
+  }
+
+  .video {
+    padding: 100px 0;
+  }
+
+  .playbtn a {
+    width: 50px;
+    height: 50px;
+  }
+
+  .playbtn a span {
+    border-left-width: 25px;
+    border-top-width: 16px;
+    border-bottom-width: 16px;
   }
 }
 
@@ -104,5 +179,30 @@
     border-left-width: 24px;
     border-top-width: 16px;
     border-bottom-width: 16px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .video-wrap {
+    padding: 10px 0;
+  }
+
+  .title h1 {
+    font-size: 24px;
+  }
+
+  .video {
+    padding: 80px 0;
+  }
+
+  .playbtn a {
+    width: 40px;
+    height: 40px;
+  }
+
+  .playbtn a span {
+    border-left-width: 20px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
   }
 }
