--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,3 +23,27 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+@media screen and (max-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
